client/stylesheets/style.css
body {
    background-color: black;
    color: white;
}

#game {
	height: 640px;
	width: 1136px;
	overflow: hidden;
}

map {
    height: 3000px;
    width: 3000px;
}
#bg {
	height: 3000px; 
	width: 3000px; 
	position: relative;
	max-width: none;
}

#nocs {
    height: 640px;
    width: 1136px;
    position: absolute;
    z-index: 5000;
    left: 0;
    top: 0;
}

.row {
	margin-top: 80px;
}

.form-control {
    background-color: white;
    color: black;
	width: 100%;
}

form {
	text-align: center;
}

.navhelp {
    position: absolute;
    z-index: 100;
}

#goal {
    height: 200px;
    width: 250px;
    position: relative;
    z-index: 200;
    left: -100px;
    top: -2200px;
    background: url('ninjasOnTransparent.png') no-repeat;
    border: none;
}

#left {
    top: 10px;
    left: 10px;
}

#right {
    top: 50px;
    left: 10px;
}

#up {
    top: 90px;
    left: 10px;
}

#down {
    top: 130px;
    left: 10px;
}

